--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Index</title>
+  <title>Weather {{ location.region }}</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="/css/style.css" rel="stylesheet">
@@ -12,10 +12,10 @@
 </head>
 
 <body>
-  <div class="img-banner"></div>
+  <div style="background-image: url({{ image }});" class="img-banner"></div>
   <main>
     <div class="content">
-      <h1>{{ location.region }}</h1>
+      <h1>{{ location.name }}</h1>
       <div class="forecast-details">
         <h2>{{ temperature }}°<span>C</span></h2>
         <ul>
